gitops/linkerd/linkerd-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: linkerd-viz-headers
  namespace: linkerd-viz
spec:
  headers:
    customRequestHeaders:
      Host: "web.linkerd-viz.svc.cluster.local"
