gitops/linkerd/linkerd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-ingress
  namespace: linkerd-viz
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: linkerd-viz-linkerd-viz-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: linkerd.127.0.0.1.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
